--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <div class="swiper">
+        <div class="swiper" onclick="requestFullscreen()">
             <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <!-- <div class="swiper-slide">Slide 1</div> -->
-              <!-- <div class="swiper-slide">Slide 2</div> -->
-              <!-- <div class="swiper-slide">Slide 3</div> -->
-            </div>
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <!-- <div class="swiper-slide">Slide 1</div> -->
+            <!-- <div class="swiper-slide">Slide 2</div> -->
+            <!-- <div class="swiper-slide">Slide 3</div> -->
           </div>
+        </div>
         <script type="text/javascript" src="./swiper-bundle.min.js"></script>
         <script type="text/javascript" src="./images/index.js"></script>
         <script type="text/javascript" src="./main.js"></script>
